--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2062,7 +2062,8 @@ span.title-back {
 }
 
 .project-info-content {
-    width: calc(100% - 43px);
+    /*width: calc(100% - 43px);*/
+    width: 100%;
     /* height: 100%; */
     position: relative;
     /* top: 0; */
