some general changes

--- a/expert/templates/expert/layouts/project_details.html
+++ b/expert/templates/expert/layouts/project_details.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="fixed-back project-details">
-    <div class="card text-right">
+    <div class="card text-right b-x0">
         <div class="close"></div>
         <div class="vote">
             <i class="fas fa-ellipsis-v"></i>
@@ -236,7 +236,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mbottom-lg-25">
+            <div class="row">
                 <div class="col-lg-12 text-right">
                     {% include 'expert/layouts/comment.html' %}
                 </div>
