--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -35,7 +35,7 @@
 
                                 </div>
                                 <div class="col-6">
-                                    <button class="chamran-btn-info default-btn" type="button"
+                                    <button class="preview-project default-btn" type="button"
                                             id="{{ project.id }}">مشاهده
                                     </button>
                                 </div>
@@ -46,7 +46,7 @@
                     {#                        <div class="card project-card text-right">#}
                     {#                            <h6> {{ project.project_form.project_title_persian }}</h6>#}
                     {#                            <div class="employer"><i class="far fa-envelope"></i> پیام ها</div>#}
-                    {#                            <button class="chamran-btn-info default-btn show-btn show-project" type="button"#}
+                    {#                            <button class="preview-project default-btn show-btn show-project" type="button"#}
                     {#                                    id="{{ project.id }}">مشاهده#}
                     {#                            </button>#}
                     {#                            <div class="timetable"><i></i> در حال بررسی!</div>#}
@@ -73,7 +73,7 @@
 
                                 </div>
                                 <div class="col-6">
-                                    <button class="chamran-btn-info default-btn" type="button"
+                                    <button class="preview-project default-btn" type="button"
                                             id="{{ project.id }}">مشاهده
                                     </button>
                                 </div>
@@ -93,7 +93,7 @@
                     {#                            {% else %}#}
                     {#                                <div class="employer"><i class="far fa-envelope"></i> پیام ها</div>#}
                     {#                            {% endif %}#}
-                    {#                            <button class="chamran-btn-info default-btn show-btn show-project" type="button"#}
+                    {#                            <button class="preview-project default-btn show-btn show-project" type="button"#}
                     {#                                    id="{{ project.id }}">مشاهده#}
                     {#                            </button>#}
                     {#                            <div class="timetable"><i class="fas fa-hourglass-half"></i> {{ project.time_left }}#}
@@ -140,7 +140,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-4">
-                                    <button class="chamran-btn-info default-btn" type="button"
+                                    <button class="preview-project default-btn" type="button"
                                             id="{{ project.id }}">مشاهده
                                     </button>
                                 </div>
@@ -168,7 +168,7 @@
                     {#                                    {{ project.expert_accepted.expertform }}#}
                     {#                                </div>#}
                     {#                            {% endif %}#}
-                    {#                            <button class="chamran-btn-info default-btn show-btn show-project" type="button"#}
+                    {#                            <button class="preview-project default-btn show-btn show-project" type="button"#}
                     {#                                    id="{{ project.id }}">مشاهده#}
                     {#                            </button>#}
                     {#                            <div class="timetable"><i class="fas fa-hourglass-half"></i> {{ project.time_left }}#}
@@ -210,7 +210,7 @@
                                     </div>
                                 </div>
                                 <div class="col-6">
-                                    <button class="chamran-btn-info default-btn" type="button"
+                                    <button class="preview-project default-btn" type="button"
                                             id="{{ project.id }}">مشاهده
                                     </button>
                                 </div>
@@ -230,7 +230,7 @@
                     {#                                    {{ project.expert_accepted.expertform }}#}
                     {#                                </div>#}
                     {#                            {% endif %}#}
-                    {#                            <button class="chamran-btn-info default-btn show-btn show-project" type="button"#}
+                    {#                            <button class="preview-project default-btn show-btn show-project" type="button"#}
                     {#                                    id="{{ project.id }}">نمایش#}
                     {#                            </button>#}
                     {#                            <div class="timetable"><i></i> معلق!</div>#}
@@ -281,7 +281,7 @@
                                     </div>
                                 </div>
                                 <div class="col-6">
-                                    <button class="chamran-btn-info default-btn" type="button"
+                                    <button class="preview-project default-btn" type="button"
                                             id="{{ project.id }}">مشاهده
                                     </button>
                                 </div>
@@ -300,7 +300,7 @@
                     {#                                    {{ project.expert_accepted.expertform }}#}
                     {#                                </div>#}
                     {#                            {% endif %}#}
-                    {#                            <button class="chamran-btn-info default-btn show-btn" type="button"#}
+                    {#                            <button class="preview-project default-btn show-btn" type="button"#}
                     {#                                    id="{{ project.id }}">نمایش#}
                     {#                            </button>#}
                     {#                            <div class="timetable"><i class="fas fa-check-double"></i> تکمیل شد</div>#}
