--- a/industry/templates/industry/layouts/comment.html
+++ b/industry/templates/industry/layouts/comment.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 <div class="comment">
-    <div class="add-comment">
+    <div class="add-comment" style="display: none">
         <form action="" method="post" enctype="multipart/form-data" id="comment-form">
             <div class="row">
                 <div class="col-lg-12">
