--- a/industry/templates/industry/layouts/showProject.html
+++ b/industry/templates/industry/layouts/showProject.html
@@ -1,9 +1,9 @@
 {% load static %}
 <div class="fixed-back showProject">
-    <div class="card text-right stick-footer min-padding">
+    <div class="card text-right stick-footer">
         <div class="close"></div>
-        <div class="card-head">عنوان پروژه</div>
-        <div class="vote">
+        <div class="card-head"></div>
+        <div class="vote" style="display: none">
             <span class="dots"></span>
             <div class="vote-dialog">
                 <div class="card expert-back text-center">ارزیابی از استاد</div>
@@ -20,13 +20,13 @@
                         <div class="col-6">
                             <div class="establish-time">
                                 <div class="time-head">ثبت</div>
-                                <div class="time-body">تاریخ ثبت</div>
+                                <div class="time-body"></div>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="time-left">
                                 <div class="time-head">مهلت</div>
-                                <div class="time-body">مهلت</div>
+                                <div class="time-body"></div>
                             </div>
                         </div>
                     </div>
