--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -54,7 +54,7 @@
 }
 
 .comments {
-    max-height: 200px;
+    max-height: 300px;
     overflow: scroll;
 }
 
@@ -63,6 +63,26 @@
     margin: 10px auto;
 }
 
+.system-comment {
+
+}
+
+.system-comment .comment-body {
+    margin: 0 auto;
+    min-height: auto;
+    width: fit-content;
+    direction: rtl;
+    border: none;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    background-color: #3CCD1C;
+    padding: 5px 15px;
+}
+.system-comment .comment-body pre {
+    color: #ffffff!important;
+    font-weight: 500;
+}
 .my-comment {
     /*padding-right: 70px;*/
 }
@@ -203,10 +223,12 @@ span.new-comment-tools {
     color: #707070;
     padding: 0;
 }
+
 .my-comment > .comment-body > .comment-tools .dropdown-toggle:focus i {
     background-color: #e0e1e270;
     cursor: pointer;
 }
+
 .my-comment > .comment-body > .comment-tools .dropdown-toggle:after {
     display: none;
 }
